Fix tags spacing

--- a/themes/awesome/assets/css/main.css
+++ b/themes/awesome/assets/css/main.css
@@ -1715,8 +1715,8 @@ figure figcaption {
   margin-bottom: 2.5rem;
 }
 .page__navtags {
-  margin-top: 6rem;
-  margin-bottom: 3rem;
+  margin-top: 5rem;
+  margin-bottom: 2.5rem;
 }
 .page__tags {
   list-style: none;
@@ -1732,33 +1732,10 @@ figure figcaption {
   font-family: var(--font-sans-serif);
   font-weight: 500;
 }
-.page__nav {
-  --flow-space: 2rem;
-}
-.page__nav__heading {
-  font-family: var(--font-sans-serif);
-  font-size: var(--font-size-600);
-  margin-top: 1rem;
-  border-top: var(--border-medium) solid var(--fg);
-  padding-top: 2rem;
-}
-.page__nav__prev__title, .page__nav__next__title {
-  font-size: var(--font-size-300);
-}
-.page__seeall {
-  margin-inline: auto;
-}
-@media screen {
-  .page__seeall {
-    max-width: var(--content-width);
-  }
-}
-.page__seeall__link {
-  font-size: var(--font-size-400);
-}
 .page__related {
   margin-inline: auto;
-  margin-block: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 2.5rem;
 }
 @media screen {
   .page__related {
@@ -1769,6 +1746,29 @@ figure figcaption {
   font-family: var(--font-sans-serif);
   font-size: var(--font-size-600);
   margin-top: 1rem;
+}
+.page__nav__heading {
+  font-family: var(--font-sans-serif);
+  font-size: var(--font-size-600);
+  margin-top: 1rem;
+  border-top: var(--border-medium) solid var(--fg);
+  padding-top: 2rem;
+}
+.page__nav__prev__title, .page__nav__next__title {
+  font-size: var(--font-size-300);
+  margin-top: 2rem;
+}
+.page__seeall {
+  margin-inline: auto;
+  margin-top: 2.5rem;
+}
+@media screen {
+  .page__seeall {
+    max-width: var(--content-width);
+  }
+}
+.page__seeall__link {
+  font-size: var(--font-size-400);
 }
 
 .poems {
